# vimouse-rs

./: Cargo.toml  README  README.md
scripts/: vimouse.sh
src/: main.rs
