[package]
name = "vimouse"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
gpui = { path = "/tmp/zed/crates/gpui" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"
cocoa = "0.25"
